# serializer version: 1
# name: test_doc_needs_builder[test_app0]
  dict({
    'current_version': '1.0',
    'versions': dict({
      '1.0': dict({
        'needs': dict({
          'TC_001': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'TC_001',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': False,
            'jinja_content': False,
            'layout': None,
            'lineno': 8,
            'links': list([
            ]),
            'links_back': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': 'open',
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'Test example',
            'type': 'test',
            'type_name': 'Test Case',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'TC_NEG_001': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'TC_NEG_001',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': False,
            'jinja_content': False,
            'layout': None,
            'lineno': 12,
            'links': list([
            ]),
            'links_back': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': 'closed',
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'Negative test example',
            'type': 'test',
            'type_name': 'Test Case',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'US_63252': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'US_63252',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': False,
            'jinja_content': False,
            'layout': None,
            'lineno': 4,
            'links': list([
            ]),
            'links_back': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': 'in progress',
            'style': None,
            'tags': list([
              '1',
            ]),
            'template': None,
            'title': 'A story',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
        }),
        'needs_amount': 3,
        'needs_schema': dict({
          '$schema': 'http://json-schema.org/draft-07/schema#',
          'properties': dict({
            'arch': dict({
              'additionalProperties': dict({
                'type': 'string',
              }),
              'default': dict({
              }),
              'description': 'Mapping of uml key to uml content.',
              'field_type': 'core',
              'type': 'object',
            }),
            'avatar': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'closed_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'completion': dict({
              'default': None,
              'description': 'Added for needgantt functionality',
              'field_type': 'extra',
              'type': 'integer',
            }),
            'constraints': dict({
              'default': list([
              ]),
              'description': 'List of constraint names, which are defined for this need.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'constraints_error': dict({
              'default': None,
              'description': 'An error message set if any constraint failed, and `error_message` field is set in config.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'constraints_passed': dict({
              'default': True,
              'description': 'True if all constraints passed, False if any failed, None if not yet checked.',
              'field_type': 'core',
              'type': list([
                'boolean',
                'null',
              ]),
            }),
            'constraints_results': dict({
              'additionalProperties': dict({
                'type': 'object',
              }),
              'default': dict({
              }),
              'description': 'Mapping of constraint name, to check name, to result, None if not yet checked.',
              'field_type': 'core',
              'type': list([
                'object',
                'null',
              ]),
            }),
            'content': dict({
              'default': '',
              'description': 'The main content of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'created_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'docname': dict({
              'default': None,
              'description': 'Name of the document where the need is defined (None if external).',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'doctype': dict({
              'default': '.rst',
              'description': "The markup type of the content, denoted by the suffix of the source file, e.g. '.rst'.",
              'field_type': 'core',
              'type': 'string',
            }),
            'duration': dict({
              'default': None,
              'description': 'Added for needgantt functionality',
              'field_type': 'extra',
              'type': 'integer',
            }),
            'external_css': dict({
              'default': '',
              'description': 'CSS class name, added to the external reference.',
              'field_type': 'core',
              'type': 'string',
            }),
            'external_url': dict({
              'default': None,
              'description': 'URL of the need, if it is an external need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'has_dead_links': dict({
              'default': False,
              'description': 'True if any links reference need ids that are not found in the need list.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'has_forbidden_dead_links': dict({
              'default': False,
              'description': 'True if any links reference need ids that are not found in the need list, and the link type does not allow dead links.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'id': dict({
              'description': 'ID of the data.',
              'field_type': 'core',
              'type': 'string',
            }),
            'id_prefix': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'is_external': dict({
              'default': False,
              'description': 'If true, no node is created and need is referencing external url.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'is_import': dict({
              'default': False,
              'description': 'If true, the need was derived from an import.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'is_modified': dict({
              'default': False,
              'description': 'Whether the need was modified by needextend.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'jinja_content': dict({
              'default': False,
              'description': 'Whether the content was pre-processed by jinja.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'layout': dict({
              'default': None,
              'description': 'Key of the layout, which is used to render the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'lineno': dict({
              'default': None,
              'description': 'Line number where the need is defined (None if external).',
              'field_type': 'core',
              'type': list([
                'integer',
                'null',
              ]),
            }),
            'links': dict({
              'default': list([
              ]),
              'description': 'Link field',
              'field_type': 'links',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'links_back': dict({
              'default': list([
              ]),
              'description': 'Backlink field',
              'field_type': 'backlinks',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'max_amount': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'max_content_lines': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'modifications': dict({
              'default': 0,
              'description': 'Number of modifications by needextend.',
              'field_type': 'core',
              'type': 'integer',
            }),
            'params': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'parent_need': dict({
              'default': None,
              'description': 'Simply the first parent id.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'parent_needs': dict({
              'default': list([
              ]),
              'description': 'Link field',
              'field_type': 'links',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'parent_needs_back': dict({
              'default': list([
              ]),
              'description': 'Backlink field',
              'field_type': 'backlinks',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'parts': dict({
              'additionalProperties': dict({
                'type': 'object',
              }),
              'default': dict({
              }),
              'description': "Mapping of parts, a.k.a. sub-needs, IDs to data that overrides the need's data",
              'field_type': 'core',
              'type': 'object',
            }),
            'post_content': dict({
              'default': None,
              'description': 'Additional content after the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'post_template': dict({
              'default': None,
              'description': 'The template key, if the post_content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'pre_content': dict({
              'default': None,
              'description': 'Additional content before the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'pre_template': dict({
              'default': None,
              'description': 'The template key, if the pre_content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'prefix': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'query': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'section_name': dict({
              'default': None,
              'description': 'Simply the first section.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'sections': dict({
              'default': list([
              ]),
              'description': 'Sections of the need.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'service': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'signature': dict({
              'default': None,
              'description': 'Derived from a docutils desc_name node.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'specific': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'status': dict({
              'default': None,
              'description': 'Status of the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'style': dict({
              'default': None,
              'description': 'Comma-separated list of CSS classes (all appended by `needs_style_`).',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'tags': dict({
              'default': list([
              ]),
              'description': 'List of tags.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'template': dict({
              'default': None,
              'description': 'The template key, if the content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'title': dict({
              'description': 'Title of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'type': dict({
              'default': '',
              'description': 'Type of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'type_name': dict({
              'default': '',
              'description': 'Name of the type.',
              'field_type': 'core',
              'type': 'string',
            }),
            'updated_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'url': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'url_postfix': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'user': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
          }),
          'type': 'object',
        }),
      }),
      '2.0': dict({
        'filters': dict({
        }),
        'filters_amount': 0,
        'needs': dict({
          'TEST_01': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'TEST_01',
            'docname': 'index',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_01',
            'full_title': 'TEST_01 DESCRIPTION',
            'id': 'TEST_01',
            'id_complete': 'TEST_01',
            'id_parent': 'TEST_01',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
              'SPEC_1',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'TEST_01 DESCRIPTION',
            'type': 'impl',
            'type_name': 'Implementation',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
          'TEST_02': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'TEST_02',
            'docname': 'index',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_02',
            'full_title': 'TEST_02 DESCRIPTION',
            'id': 'TEST_02',
            'id_complete': 'TEST_02',
            'id_parent': 'TEST_02',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
              'TEST_01',
              'REQ_1',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'open',
            'style': None,
            'tags': list([
              'test_02',
              'test',
            ]),
            'template': None,
            'title': 'TEST_02 DESCRIPTION',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
          'TEST_03': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'AAA',
            'docname': 'subpage_a/subpage_b/subpage',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_03',
            'full_title': 'AAA',
            'id': 'TEST_03',
            'id_complete': 'TEST_03',
            'id_parent': 'TEST_03',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'open',
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'AAA',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
        }),
        'needs_amount': 6,
      }),
    }),
  })
# ---
# name: test_doc_needs_builder_remove_defaults[test_app0]
  dict({
    'current_version': '1.0',
    'versions': dict({
      '1.0': dict({
        'needs': dict({
          'TC_001': dict({
            'docname': 'index',
            'external_css': 'external_link',
            'id': 'TC_001',
            'lineno': 8,
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'status': 'open',
            'title': 'Test example',
            'type': 'test',
            'type_name': 'Test Case',
          }),
          'TC_NEG_001': dict({
            'docname': 'index',
            'external_css': 'external_link',
            'id': 'TC_NEG_001',
            'lineno': 12,
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'status': 'closed',
            'title': 'Negative test example',
            'type': 'test',
            'type_name': 'Test Case',
          }),
          'US_63252': dict({
            'docname': 'index',
            'external_css': 'external_link',
            'id': 'US_63252',
            'lineno': 4,
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'status': 'in progress',
            'tags': list([
              '1',
            ]),
            'title': 'A story',
            'type': 'story',
            'type_name': 'User Story',
          }),
        }),
        'needs_amount': 3,
        'needs_defaults_removed': True,
        'needs_schema': dict({
          '$schema': 'http://json-schema.org/draft-07/schema#',
          'properties': dict({
            'arch': dict({
              'additionalProperties': dict({
                'type': 'string',
              }),
              'default': dict({
              }),
              'description': 'Mapping of uml key to uml content.',
              'field_type': 'core',
              'type': 'object',
            }),
            'avatar': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'closed_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'completion': dict({
              'default': None,
              'description': 'Added for needgantt functionality',
              'field_type': 'extra',
              'type': 'integer',
            }),
            'constraints': dict({
              'default': list([
              ]),
              'description': 'List of constraint names, which are defined for this need.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'constraints_error': dict({
              'default': None,
              'description': 'An error message set if any constraint failed, and `error_message` field is set in config.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'constraints_passed': dict({
              'default': True,
              'description': 'True if all constraints passed, False if any failed, None if not yet checked.',
              'field_type': 'core',
              'type': list([
                'boolean',
                'null',
              ]),
            }),
            'constraints_results': dict({
              'additionalProperties': dict({
                'type': 'object',
              }),
              'default': dict({
              }),
              'description': 'Mapping of constraint name, to check name, to result, None if not yet checked.',
              'field_type': 'core',
              'type': list([
                'object',
                'null',
              ]),
            }),
            'content': dict({
              'default': '',
              'description': 'The main content of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'created_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'docname': dict({
              'default': None,
              'description': 'Name of the document where the need is defined (None if external).',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'doctype': dict({
              'default': '.rst',
              'description': "The markup type of the content, denoted by the suffix of the source file, e.g. '.rst'.",
              'field_type': 'core',
              'type': 'string',
            }),
            'duration': dict({
              'default': None,
              'description': 'Added for needgantt functionality',
              'field_type': 'extra',
              'type': 'integer',
            }),
            'external_css': dict({
              'default': '',
              'description': 'CSS class name, added to the external reference.',
              'field_type': 'core',
              'type': 'string',
            }),
            'external_url': dict({
              'default': None,
              'description': 'URL of the need, if it is an external need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'has_dead_links': dict({
              'default': False,
              'description': 'True if any links reference need ids that are not found in the need list.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'has_forbidden_dead_links': dict({
              'default': False,
              'description': 'True if any links reference need ids that are not found in the need list, and the link type does not allow dead links.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'id': dict({
              'description': 'ID of the data.',
              'field_type': 'core',
              'type': 'string',
            }),
            'id_prefix': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'is_external': dict({
              'default': False,
              'description': 'If true, no node is created and need is referencing external url.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'is_import': dict({
              'default': False,
              'description': 'If true, the need was derived from an import.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'is_modified': dict({
              'default': False,
              'description': 'Whether the need was modified by needextend.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'jinja_content': dict({
              'default': False,
              'description': 'Whether the content was pre-processed by jinja.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'layout': dict({
              'default': None,
              'description': 'Key of the layout, which is used to render the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'lineno': dict({
              'default': None,
              'description': 'Line number where the need is defined (None if external).',
              'field_type': 'core',
              'type': list([
                'integer',
                'null',
              ]),
            }),
            'links': dict({
              'default': list([
              ]),
              'description': 'Link field',
              'field_type': 'links',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'links_back': dict({
              'default': list([
              ]),
              'description': 'Backlink field',
              'field_type': 'backlinks',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'max_amount': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'max_content_lines': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'modifications': dict({
              'default': 0,
              'description': 'Number of modifications by needextend.',
              'field_type': 'core',
              'type': 'integer',
            }),
            'params': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'parent_need': dict({
              'default': None,
              'description': 'Simply the first parent id.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'parent_needs': dict({
              'default': list([
              ]),
              'description': 'Link field',
              'field_type': 'links',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'parent_needs_back': dict({
              'default': list([
              ]),
              'description': 'Backlink field',
              'field_type': 'backlinks',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'parts': dict({
              'additionalProperties': dict({
                'type': 'object',
              }),
              'default': dict({
              }),
              'description': "Mapping of parts, a.k.a. sub-needs, IDs to data that overrides the need's data",
              'field_type': 'core',
              'type': 'object',
            }),
            'post_content': dict({
              'default': None,
              'description': 'Additional content after the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'post_template': dict({
              'default': None,
              'description': 'The template key, if the post_content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'pre_content': dict({
              'default': None,
              'description': 'Additional content before the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'pre_template': dict({
              'default': None,
              'description': 'The template key, if the pre_content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'prefix': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'query': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'section_name': dict({
              'default': None,
              'description': 'Simply the first section.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'sections': dict({
              'default': list([
              ]),
              'description': 'Sections of the need.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'service': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'signature': dict({
              'default': None,
              'description': 'Derived from a docutils desc_name node.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'specific': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'status': dict({
              'default': None,
              'description': 'Status of the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'style': dict({
              'default': None,
              'description': 'Comma-separated list of CSS classes (all appended by `needs_style_`).',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'tags': dict({
              'default': list([
              ]),
              'description': 'List of tags.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'template': dict({
              'default': None,
              'description': 'The template key, if the content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'title': dict({
              'description': 'Title of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'type': dict({
              'default': '',
              'description': 'Type of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'type_name': dict({
              'default': '',
              'description': 'Name of the type.',
              'field_type': 'core',
              'type': 'string',
            }),
            'updated_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'url': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'url_postfix': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'user': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
          }),
          'type': 'object',
        }),
      }),
      '2.0': dict({
        'filters': dict({
        }),
        'filters_amount': 0,
        'needs': dict({
          'TEST_01': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'TEST_01',
            'docname': 'index',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_01',
            'full_title': 'TEST_01 DESCRIPTION',
            'id': 'TEST_01',
            'id_complete': 'TEST_01',
            'id_parent': 'TEST_01',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
              'SPEC_1',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'TEST_01 DESCRIPTION',
            'type': 'impl',
            'type_name': 'Implementation',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
          'TEST_02': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'TEST_02',
            'docname': 'index',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_02',
            'full_title': 'TEST_02 DESCRIPTION',
            'id': 'TEST_02',
            'id_complete': 'TEST_02',
            'id_parent': 'TEST_02',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
              'TEST_01',
              'REQ_1',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'open',
            'style': None,
            'tags': list([
              'test_02',
              'test',
            ]),
            'template': None,
            'title': 'TEST_02 DESCRIPTION',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
          'TEST_03': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'AAA',
            'docname': 'subpage_a/subpage_b/subpage',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_03',
            'full_title': 'AAA',
            'id': 'TEST_03',
            'id_complete': 'TEST_03',
            'id_parent': 'TEST_03',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'open',
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'AAA',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
        }),
        'needs_amount': 6,
      }),
    }),
  })
# ---
# name: test_doc_needs_builder_reproducible[test_app0]
  dict({
    'current_version': '1.0',
    'versions': dict({
      '1.0': dict({
        'needs': dict({
          'TC_001': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'TC_001',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': False,
            'jinja_content': False,
            'layout': None,
            'lineno': 8,
            'links': list([
            ]),
            'links_back': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': 'open',
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'Test example',
            'type': 'test',
            'type_name': 'Test Case',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'TC_NEG_001': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'TC_NEG_001',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': False,
            'jinja_content': False,
            'layout': None,
            'lineno': 12,
            'links': list([
            ]),
            'links_back': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': 'closed',
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'Negative test example',
            'type': 'test',
            'type_name': 'Test Case',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'US_63252': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'US_63252',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': False,
            'jinja_content': False,
            'layout': None,
            'lineno': 4,
            'links': list([
            ]),
            'links_back': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'TEST DOCUMENT NEEDS Builder',
            'sections': list([
              'TEST DOCUMENT NEEDS Builder',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': 'in progress',
            'style': None,
            'tags': list([
              '1',
            ]),
            'template': None,
            'title': 'A story',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
        }),
        'needs_amount': 3,
        'needs_schema': dict({
          '$schema': 'http://json-schema.org/draft-07/schema#',
          'properties': dict({
            'arch': dict({
              'additionalProperties': dict({
                'type': 'string',
              }),
              'default': dict({
              }),
              'description': 'Mapping of uml key to uml content.',
              'field_type': 'core',
              'type': 'object',
            }),
            'avatar': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'closed_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'completion': dict({
              'default': None,
              'description': 'Added for needgantt functionality',
              'field_type': 'extra',
              'type': 'integer',
            }),
            'constraints': dict({
              'default': list([
              ]),
              'description': 'List of constraint names, which are defined for this need.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'constraints_error': dict({
              'default': None,
              'description': 'An error message set if any constraint failed, and `error_message` field is set in config.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'constraints_passed': dict({
              'default': True,
              'description': 'True if all constraints passed, False if any failed, None if not yet checked.',
              'field_type': 'core',
              'type': list([
                'boolean',
                'null',
              ]),
            }),
            'constraints_results': dict({
              'additionalProperties': dict({
                'type': 'object',
              }),
              'default': dict({
              }),
              'description': 'Mapping of constraint name, to check name, to result, None if not yet checked.',
              'field_type': 'core',
              'type': list([
                'object',
                'null',
              ]),
            }),
            'content': dict({
              'default': '',
              'description': 'The main content of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'created_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'docname': dict({
              'default': None,
              'description': 'Name of the document where the need is defined (None if external).',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'doctype': dict({
              'default': '.rst',
              'description': "The markup type of the content, denoted by the suffix of the source file, e.g. '.rst'.",
              'field_type': 'core',
              'type': 'string',
            }),
            'duration': dict({
              'default': None,
              'description': 'Added for needgantt functionality',
              'field_type': 'extra',
              'type': 'integer',
            }),
            'external_css': dict({
              'default': '',
              'description': 'CSS class name, added to the external reference.',
              'field_type': 'core',
              'type': 'string',
            }),
            'external_url': dict({
              'default': None,
              'description': 'URL of the need, if it is an external need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'has_dead_links': dict({
              'default': False,
              'description': 'True if any links reference need ids that are not found in the need list.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'has_forbidden_dead_links': dict({
              'default': False,
              'description': 'True if any links reference need ids that are not found in the need list, and the link type does not allow dead links.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'id': dict({
              'description': 'ID of the data.',
              'field_type': 'core',
              'type': 'string',
            }),
            'id_prefix': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'is_external': dict({
              'default': False,
              'description': 'If true, no node is created and need is referencing external url.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'is_import': dict({
              'default': False,
              'description': 'If true, the need was derived from an import.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'is_modified': dict({
              'default': False,
              'description': 'Whether the need was modified by needextend.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'jinja_content': dict({
              'default': False,
              'description': 'Whether the content was pre-processed by jinja.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'layout': dict({
              'default': None,
              'description': 'Key of the layout, which is used to render the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'lineno': dict({
              'default': None,
              'description': 'Line number where the need is defined (None if external).',
              'field_type': 'core',
              'type': list([
                'integer',
                'null',
              ]),
            }),
            'links': dict({
              'default': list([
              ]),
              'description': 'Link field',
              'field_type': 'links',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'links_back': dict({
              'default': list([
              ]),
              'description': 'Backlink field',
              'field_type': 'backlinks',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'max_amount': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'max_content_lines': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'modifications': dict({
              'default': 0,
              'description': 'Number of modifications by needextend.',
              'field_type': 'core',
              'type': 'integer',
            }),
            'params': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'parent_need': dict({
              'default': None,
              'description': 'Simply the first parent id.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'parent_needs': dict({
              'default': list([
              ]),
              'description': 'Link field',
              'field_type': 'links',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'parent_needs_back': dict({
              'default': list([
              ]),
              'description': 'Backlink field',
              'field_type': 'backlinks',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'parts': dict({
              'additionalProperties': dict({
                'type': 'object',
              }),
              'default': dict({
              }),
              'description': "Mapping of parts, a.k.a. sub-needs, IDs to data that overrides the need's data",
              'field_type': 'core',
              'type': 'object',
            }),
            'post_content': dict({
              'default': None,
              'description': 'Additional content after the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'post_template': dict({
              'default': None,
              'description': 'The template key, if the post_content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'pre_content': dict({
              'default': None,
              'description': 'Additional content before the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'pre_template': dict({
              'default': None,
              'description': 'The template key, if the pre_content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'prefix': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'query': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'section_name': dict({
              'default': None,
              'description': 'Simply the first section.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'sections': dict({
              'default': list([
              ]),
              'description': 'Sections of the need.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'service': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'signature': dict({
              'default': None,
              'description': 'Derived from a docutils desc_name node.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'specific': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'status': dict({
              'default': None,
              'description': 'Status of the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'style': dict({
              'default': None,
              'description': 'Comma-separated list of CSS classes (all appended by `needs_style_`).',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'tags': dict({
              'default': list([
              ]),
              'description': 'List of tags.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'template': dict({
              'default': None,
              'description': 'The template key, if the content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'title': dict({
              'description': 'Title of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'type': dict({
              'default': '',
              'description': 'Type of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'type_name': dict({
              'default': '',
              'description': 'Name of the type.',
              'field_type': 'core',
              'type': 'string',
            }),
            'updated_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'url': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'url_postfix': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'user': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
          }),
          'type': 'object',
        }),
      }),
      '2.0': dict({
        'created': '2021-05-11T13:54:22.331724',
        'filters': dict({
        }),
        'filters_amount': 0,
        'needs': dict({
          'TEST_01': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'TEST_01',
            'docname': 'index',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_01',
            'full_title': 'TEST_01 DESCRIPTION',
            'id': 'TEST_01',
            'id_complete': 'TEST_01',
            'id_parent': 'TEST_01',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
              'SPEC_1',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'TEST_01 DESCRIPTION',
            'type': 'impl',
            'type_name': 'Implementation',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
          'TEST_02': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'TEST_02',
            'docname': 'index',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_02',
            'full_title': 'TEST_02 DESCRIPTION',
            'id': 'TEST_02',
            'id_complete': 'TEST_02',
            'id_parent': 'TEST_02',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
              'TEST_01',
              'REQ_1',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'open',
            'style': None,
            'tags': list([
              'test_02',
              'test',
            ]),
            'template': None,
            'title': 'TEST_02 DESCRIPTION',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
          'TEST_03': dict({
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'created_at': '',
            'description': 'AAA',
            'docname': 'subpage_a/subpage_b/subpage',
            'duration': '',
            'external_css': 'external_link',
            'external_url': 'file:///home/daniel/workspace/sphinx/sphinxcontrib-needs/tests/doc_test/external_doc/__error__#TEST_03',
            'full_title': 'AAA',
            'id': 'TEST_03',
            'id_complete': 'TEST_03',
            'id_parent': 'TEST_03',
            'id_prefix': '',
            'is_external': True,
            'is_need': True,
            'is_part': False,
            'layout': None,
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'query': '',
            'section_name': '',
            'sections': list([
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'open',
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'AAA',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'user': '',
          }),
        }),
        'needs_amount': 6,
      }),
    }),
  })
# ---
